--- a/InitiativesPlus.ClientApp/src/app/modules/home/home.component.html
+++ b/InitiativesPlus.ClientApp/src/app/modules/home/home.component.html
@@ -1,1 +1,110 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>InitiativesPLUS by 99X</title>
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+</head>
+<body>
+  <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
+    <div class="container">
+      <div class="card login-card">
+        <div class="row no-gutters">
+          <div class="col-md-5">
+            <img *ngIf="loginRegisterToggle" src="../../../assets/login.jpg" alt="login" class="login-card-img">
+            <img *ngIf="!loginRegisterToggle" src="../../../assets/register.jpg" alt="login" class="login-card-img">
+          </div>
+          <div class="col-md-7">
+            <div class="card-body">
+              <div class="brand-wrapper">
+                <img src="../../../assets/logo-full-black.png" alt="logo" class="logo">
+              </div>
+
+              <div *ngIf="loginRegisterToggle">
+                <p class="login-card-description">Sign into your account</p>
+                <form [formGroup]="loginForm" (submit)="login()">
+                  <div class="form-group" [ngClass]="{'has-error': loginForm.get('username').errors && loginForm.get('username').touched}">
+                      <input type="text" class="form-control" placeholder="Username" formControlName="username">
+                      <span class="help-block" *ngIf="loginForm.get('username').hasError('required') && loginForm.get('username').touched">
+                        Username is required.
+                      </span>
+                    </div>
+                    <div class="form-group" [ngClass]="{'has-error': loginForm.get('password').errors && loginForm.get('password').touched}">
+                      <input type="password" class="form-control" placeholder="Password" formControlName="password">
+                      <span class="help-block" *ngIf="loginForm.get('password').hasError('required') && loginForm.get('password').touched">
+                        Password is required.
+                      </span>
+                      <span class="help-block" *ngIf="loginForm.get('password').hasError('minlength') && loginForm.get('password').touched">
+                        Password must be at least 4 characters long.
+                      </span>
+                      <span class="help-block" *ngIf="loginForm.get('password').hasError('maxlength') && loginForm.get('password').touched">
+                        Password cannot exceed 8 characters.
+                      </span>
+                    </div>
+                    <input [disabled]="!loginForm.valid" type="submit" name="login" id="login" class="btn btn-block login-btn mb-4" value="Login">
+                </form>
+                <a href="#!" class="forgot-password-link">Forgot password?</a>
+                <p class="login-card-footer-text">Don't have an account? <a href="javascript:void(0);" (click)="registerToggle()" class="text-reset">Register here</a></p>
+              </div>
+              
+              <div *ngIf="!loginRegisterToggle">
+                <p class="login-card-description">Sign Up</p>
+                <form [formGroup]="registerForm" (submit)="register()">
+                  <div class="form-group" [ngClass]="{'has-error': registerForm.get('username').errors && registerForm.get('username').touched}">
+                    <input type="text" class="form-control" placeholder="Username" formControlName="username">
+                    <span class="help-block" *ngIf="registerForm.get('username').hasError('required') && registerForm.get('username').touched">
+                      Username is required.
+                    </span>
+                  </div>
+                  <div class="form-group" [ngClass]="{'has-error': registerForm.get('email').touched && registerForm.get('email').hasError('required')}">
+                    <input class="form-control" placeholder="Email" formControlName="email">
+                    <span class="help-block" *ngIf="registerForm.get('email').touched && registerForm.get('email').hasError('required')">Email is required</span>
+                  </div> 
+                  <div class="form-group" [ngClass]="{'has-error': registerForm.get('password').errors && registerForm.get('password').touched}">
+                    <input type="password" class="form-control" placeholder="Password" formControlName="password">
+                    <span class="help-block" *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">
+                      Password is required.
+                    </span>
+                    <span class="help-block" *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched">
+                      Password must be at least 4 characters long.
+                    </span>
+                    <span class="help-block" *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched">
+                      Password cannot exceed 8 characters.
+                    </span>
+                  </div>
+                
+                  <div class="form-group" [ngClass]="{'has-error': registerForm.get('confirmPassword').errors 
+                    && registerForm.get('confirmPassword').touched
+                    || registerForm.get('confirmPassword').touched && registerForm.hasError('mismatch')}">
+                    <input type="password" class="form-control" placeholder="Confirm Password" formControlName="confirmPassword">
+                    <span class="help-block" *ngIf="registerForm.get('confirmPassword').hasError('required') && registerForm.get('confirmPassword').touched">
+                      Confirm Password is required.
+                    </span>
+                    <span class="help-block" *ngIf="registerForm.get('confirmPassword').touched && registerForm.hasError('mismatch')">
+                      Confirm Password must match password.
+                    </span>
+                  </div>
+                  <input [disabled]="!registerForm.valid" type="submit" name="login" id="login" class="btn btn-block login-btn mb-4" value="Sign up">
+                </form>
+                <a href="#!" class="forgot-password-link">Forgot password?</a>
+                <p class="login-card-footer-text">Already have an account? <a href="javascript:void(0);" (click)="registerToggle()" class="text-reset">Login here</a></p>
+              </div>
+              <nav class="login-card-footer-nav">
+                <a href="#!">Terms of use.</a>&nbsp;
+                <a href="#!">Privacy policy.</a>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</body>
+</html>
