spa - changing roles

--- a/InitiativesPlus.ClientApp/src/app/shared/components/footer/footer.component.html
+++ b/InitiativesPlus.ClientApp/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-divider></mat-divider>
 <footer>
-    &copy; All rights reserved 2020
+    <p>&copy; All rights reserved {{year}} - Made with ❤ by Nishan Wickramarathna</p>
 </footer>
