join and exit initiatives

--- a/InitiativesPlus.ClientApp/src/app/modules/administration/administration.component.html
+++ b/InitiativesPlus.ClientApp/src/app/modules/administration/administration.component.html
@@ -22,7 +22,8 @@
         <mat-card-actions>
           <button mat-raised-button color="warn" (click)="changeRole()">Change Role</button>
         </mat-card-actions>
-      </mat-card><mat-grid-list cols = "4" rowHeight = "100px">
+      </mat-card>
+  <mat-grid-list cols = "4" rowHeight = "100px">
     <mat-grid-tile 
     [colspan] = "3"
     [rowspan] = "1">
