--- a/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.html
+++ b/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.html
@@ -1,28 +1,31 @@
-<h2>{{initiative?.name}}</h2>
-<mat-divider></mat-divider>
-<section>
-    <div class="example-button-row">
-      <div class="example-flex-container">
-        <div class="example-button-container">
-          <button (click)="joinInitiative()" matTooltip="Info about the action" mat-fab color="primary" aria-label="Join this initiative">
-            <mat-icon>done_outline</mat-icon>
-          </button>
+  <div class="container">
+    <h2>{{initiative?.name}}</h2>
+    <mat-divider></mat-divider>
+    <section>
+        <div class="example-button-row">
+          <div class="example-flex-container">
+            <div class="example-button-container">
+              <button (click)="joinInitiative()" matTooltip="Join this initiative" mat-fab color="primary" aria-label="Join this initiative">
+                <mat-icon>done_outline</mat-icon>
+              </button>
+            </div>
+            <div class="example-button-container">
+              <button (click)="leaveInitiative()" mat-fab color="accent" matTooltip="Leave this initiative" aria-label="Example icon button with a bookmark icon">
+                <mat-icon>not_interested</mat-icon>
+              </button>
+            </div>
+            <div class="example-button-container">
+              <button mat-fab disabled color="warn" aria-label="Example icon button with a home icon">
+                <mat-icon>home</mat-icon>
+              </button>
+            </div>
+            <div class="example-button-container">
+              <button mat-fab disabled aria-label="Example icon button with a heart icon">
+                <mat-icon>favorite</mat-icon>
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="example-button-container">
-          <button mat-fab color="accent" aria-label="Example icon button with a bookmark icon">
-            <mat-icon>bookmark</mat-icon>
-          </button>
-        </div>
-        <div class="example-button-container">
-          <button mat-fab color="warn" aria-label="Example icon button with a home icon">
-            <mat-icon>home</mat-icon>
-          </button>
-        </div>
-        <div class="example-button-container">
-          <button mat-fab disabled aria-label="Example icon button with a heart icon">
-            <mat-icon>favorite</mat-icon>
-          </button>
-        </div>
-      </div>
-    </div>
-  </section>
+      </section>
+      <mat-divider></mat-divider>
+  </div>
