--- a/InitiativesPlus.ClientApp/src/app/modules/administration/administration.component.html
+++ b/InitiativesPlus.ClientApp/src/app/modules/administration/administration.component.html
@@ -1,44 +1,51 @@
-
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-icon mat-card-avatar>loop</mat-icon>
-          <mat-card-title>Change user role</mat-card-title>
-          <mat-card-subtitle>Use this to assign new roles to existing users</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-form-field appearance="fill">
-            <mat-label>Username</mat-label>
-            <input [(ngModel)]="selectedUser" matInput #input placeholder="Username">
-            <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
-          </mat-form-field>
-        
-          <mat-form-field appearance="fill">
-            <mat-label>Roles</mat-label>
-            <mat-select [(ngModel)]="selectedRole">
-              <mat-option *ngFor="let role of userRoles" value={{role}}>{{role}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-raised-button color="warn" (click)="changeRole()">Change Role</button>
-        </mat-card-actions>
-      </mat-card>
-  <mat-grid-list cols = "4" rowHeight = "100px">
-    <mat-grid-tile 
-    [colspan] = "3"
-    [rowspan] = "1">
-    1
-    </mat-grid-tile>
-    <mat-grid-tile 
-    [colspan] = "1"
-    [rowspan] = "2">2
-    </mat-grid-tile>
-    <mat-grid-tile 
-    [colspan] = "1"
-    [rowspan] = "1">3
-    </mat-grid-tile>
-    <mat-grid-tile 
-    [colspan] = "2"
-    [rowspan] = "1">4
-    </mat-grid-tile>
- </mat-grid-list>
+ <div fxLayout="row" fxLayout.xs="column">
+  <mat-card class="example-card" fxFlex="50%;" fxFlex.xs="80%">
+    <mat-card-header>
+      <mat-icon mat-card-avatar>loop</mat-icon>
+      <mat-card-title>Change user role</mat-card-title>
+      <mat-card-subtitle>Use this to assign new roles to existing users</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field appearance="fill">
+        <mat-label>Username</mat-label>
+        <input [(ngModel)]="selectedUser" matInput #input placeholder="Username">
+        <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
+      </mat-form-field>
+    
+      <mat-form-field appearance="fill">
+        <mat-label>Roles</mat-label>
+        <mat-select [(ngModel)]="selectedRole">
+          <mat-option *ngFor="let role of userRoles" value={{role}}>{{role}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="warn" (click)="changeRole()">Change Role</button>
+    </mat-card-actions>
+  </mat-card>
+  &nbsp;&nbsp;
+  <mat-card class="example-card" fxFlex="50%;" fxFlex.xs="80%">
+    <mat-card-header>
+      <mat-icon mat-card-avatar>face</mat-icon>
+      <mat-card-title>Manage user</mat-card-title>
+      <mat-card-subtitle>Use this to assign new roles to existing users</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field appearance="fill">
+        <mat-label>Username</mat-label>
+        <input [(ngModel)]="selectedUserForStatus" matInput #input placeholder="Username">
+        <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
+      </mat-form-field>
+    
+      <mat-form-field appearance="fill">
+        <mat-label>Actions</mat-label>
+        <mat-select [(ngModel)]="selectedStatus">
+          <mat-option *ngFor="let status of userStatuses" value={{status}}>{{status}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="warn" (click)="changeStatus()">Change Role</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
