--- a/InitiativesPlus.ClientApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/InitiativesPlus.ClientApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -15,20 +15,18 @@
     <a *ngIf="canNavigate(['User', 'Super Admin', 'Initiative Lead', 'Initiative Evaluator'])" mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/initiatives">Initiatives</a>
     <a *ngIf="canNavigate(['Super Admin'])" mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/administration">Administration</a>
 
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a>
-
     <mat-divider></mat-divider>
 
     <h2 matSubheader>Tools</h2>
 
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/starterkit">
         <mat-icon>import_contacts</mat-icon>
-        Contacts
+        Initiative Starter Kit
     </a>
 
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/mentors">
         <mat-icon>contact_phone</mat-icon>
-        Leads
+        Mentors
     </a>
 
 </mat-nav-list>
