minor code cleanup

--- a/InitiativesPlus.ClientApp/src/app/shared/components/header/header.component.html
+++ b/InitiativesPlus.ClientApp/src/app/shared/components/header/header.component.html
@@ -7,7 +7,8 @@
         <span>Initiatives<i><b>PLUS</b></i></span>
 
         <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
-            <ul fxLayout="row" fxLayoutGap="20px">
+
+            <ul fxLayout="row" fxLayoutGap="20px" style="list-style-type:none;">
                 <li>
                     <button mat-icon-button>
                         <mat-icon>settings</mat-icon>
