--- a/InitiativesPlus.ClientApp/src/app/modules/administration/administration.component.html
+++ b/InitiativesPlus.ClientApp/src/app/modules/administration/administration.component.html
@@ -28,7 +28,7 @@
     <mat-card-header>
       <mat-icon mat-card-avatar>face</mat-icon>
       <mat-card-title>Manage user</mat-card-title>
-      <mat-card-subtitle>Use this to assign new roles to existing users</mat-card-subtitle>
+      <mat-card-subtitle>Use this to change status of existing users</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <mat-form-field appearance="fill">
@@ -45,7 +45,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="warn" (click)="changeStatus()">Change Role</button>
+      <button mat-raised-button color="accent" (click)="changeStatus()">Change Status</button>
     </mat-card-actions>
   </mat-card>
 </div>
