--- a/InitiativesPlus.ClientApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/InitiativesPlus.ClientApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -14,6 +14,7 @@
     <a *ngIf="canNavigate(['User', 'Super Admin', 'Initiative Lead', 'Initiative Evaluator'])" mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard">Dashboard</a>
     <a *ngIf="canNavigate(['User', 'Super Admin', 'Initiative Lead', 'Initiative Evaluator'])" mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/initiatives">Initiatives</a>
     <a *ngIf="canNavigate(['Super Admin'])" mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/administration">Administration</a>
+    <a *ngIf="canNavigate(['Initiative Evaluator'])" mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/evaluation">Evaluation</a>
 
     <mat-divider></mat-divider>
 
