--- a/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.scss
+++ b/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.scss
@@ -38,3 +38,13 @@ section {
   .container{
     text-align: center;
   }
+
+  mat-card img{
+    object-fit: cover; /*this makes the image in src fit to the size specified below*/
+    width: 70%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+    height: 70%;
+  }
+
+  .mat-card-title{
+    text-align:center;
+  }
