--- a/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.html
+++ b/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.html
@@ -14,12 +14,12 @@
                 <mat-icon>not_interested</mat-icon>
               </button>
             </div>
-            <div *ngIf="isAuthorized(evaluator)" class="example-button-container">
+            <div *ngIf="isAuthorizedUser(evaluator)" class="example-button-container">
               <button (click)="deleteInitiative()" mat-fab color="warn" matTooltip="Delete initiative" aria-label="Example icon button with a home icon">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
-            <div *ngIf="isAuthorized(evaluator)" class="example-button-container">
+            <div *ngIf="isAuthorizedUser(evaluator)" class="example-button-container">
               <button mat-fab color="accent" matTooltip="Edit" aria-label="Example icon button with a heart icon">
                 <mat-icon>edit</mat-icon>
               </button>
@@ -48,9 +48,70 @@
           </mat-card-content>
           <mat-card-actions>
             <button mat-raised-button color="accent">LIKE</button>
-            <button *ngIf="isAuthorized(evaluator)" (click)="initiativeActions(user)" mat-raised-button color="accent">ACTIONS</button>
+            <button *ngIf="isAuthorized(userList)" (click)="initiativeActions(user)" mat-raised-button color="accent">ACTIONS</button>
           </mat-card-actions>
         </mat-card>
       </div>
     </div>
 </div>
+&nbsp;&nbsp;
+
+<div class="container" *ngIf="isAuthorizedUser(lead)">
+  <h2>Actions</h2>
+<mat-divider></mat-divider>
+&nbsp;&nbsp;
+  <div class="example-action-buttons">
+    <button mat-raised-button (click)="accordion.openAll()">Expand All</button>
+    <button mat-raised-button (click)="accordion.closeAll()">Collapse All</button>
+  </div>
+  <mat-accordion class="example-headers-align" multi>
+    <mat-expansion-panel *ngFor="let action of actions">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          {{action.action}}
+        </mat-panel-title>
+        <mat-panel-description>
+          Currunt progress {{action.progress}}%
+          <mat-icon>build</mat-icon>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+  
+      <!-- <mat-form-field>
+        <mat-label>New Progress</mat-label>
+        <input matInput>
+      </mat-form-field> -->
+      <p>
+        <mat-form-field>
+          <mat-label>New Progress</mat-label>
+          <input matInput [(ngModel)]="action.progress" type="number" min="0">
+        </mat-form-field>&nbsp;&nbsp;
+        <button mat-raised-button color="accent" (click)="updateAction(action)">UPDATE</button>
+      </p>
+    </mat-expansion-panel>
+  
+    <!-- <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Day of the trip
+        </mat-panel-title>
+        <mat-panel-description>
+          Inform the date you wish to travel
+          <mat-icon>date_range</mat-icon>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+  
+      <mat-form-field>
+        <mat-label>Date</mat-label>
+        <input matInput [matDatepicker]="picker" (focus)="picker.open()" readonly>
+      </mat-form-field>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-expansion-panel> -->
+  </mat-accordion>
+  
+</div>
+&nbsp;&nbsp;
+&nbsp;&nbsp;
+&nbsp;&nbsp;
+&nbsp;&nbsp;
+&nbsp;&nbsp;
+<p></p>
