--- a/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.scss
+++ b/InitiativesPlus.ClientApp/src/app/modules/initiative/initiative.component.scss
@@ -1,3 +1,4 @@
+
 section {
     display: table;
   }
@@ -48,3 +49,22 @@ section {
   .mat-card-title{
     text-align:center;
   }
+
+  .example-action-buttons {
+    padding-bottom: 20px;
+  }
+  
+  .example-headers-align .mat-expansion-panel-header-title,
+  .example-headers-align .mat-expansion-panel-header-description {
+    flex-basis: 0;
+  }
+  
+  .example-headers-align .mat-expansion-panel-header-description {
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .example-headers-align .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+  }
+  
